--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,7 +1,9 @@
 ################################# Default configuration ###################
 baseURL = "https://examplesite.com"
-title = "Meghna"
+title = "La Communication Digitale By David Bailly"
 theme = "meghna-hugo"
+defaultContentLanguage = "fr"
+languageCode = "fr"
 themesDir = "../.."
 # post pagination
 paginate = "6"
@@ -43,109 +45,109 @@ link = "plugins/google-map/map.js"
 
 ################### English Navigation ########################
 [[Languages.en.menu.main]]
-name = "about"
+name = "About"
 pre = "#"
 url = "about"
 weight = 1
 
 [[Languages.en.menu.main]]
-name = "services"
+name = "Services"
 pre = "#"
 url = "services"
 weight = 2
 
 [[Languages.en.menu.main]]
-name = "portfolio"
+name = "Portfolio"
 pre = "#"
 url = "portfolio"
 weight = 3
 
 [[Languages.en.menu.main]]
-name = "team"
+name = "Team"
 pre = "#"
 url = "team"
 weight = 4
 
 [[Languages.en.menu.main]]
-name = "pricing"
+name = "Pricing"
 pre = "#"
 url = "pricing"
 weight = 5
 
 [[Languages.en.menu.main]]
-name = "blog"
+name = "Blog"
 pre = "#"
 url = "blog"
 weight = 6
 
 [[Languages.en.menu.main]]
-name = "contact"
+name = "Contact"
 pre = "#"
 url = "contact"
 weight = 7
 
-[[Languages.en.menu.main]]
-name = "themefisher"
-pre = ""
-url = "https://themefisher.com/"
-weight = 8
+# [[Languages.en.menu.main]]
+# name = "themefisher"
+# pre = ""
+# url = "https://themefisher.com/"
+# weight = 8
 
 
 ################### French Navigation ########################
 [[Languages.fr.menu.main]]
-name = "sur"
+name = "À propos"
 pre = "#"
 url = "about"
 weight = 1
 
 [[Languages.fr.menu.main]]
-name = "un service"
+name = "Services"
 pre = "#"
 url = "services"
 weight = 2
 
 [[Languages.fr.menu.main]]
-name = "portefeuille"
+name = "Projet"
 pre = "#"
 url = "portfolio"
 weight = 3
 
 [[Languages.fr.menu.main]]
-name = "équipe"
+name = "Équipe"
 pre = "#"
 url = "team"
 weight = 4
 
 [[Languages.fr.menu.main]]
-name = "tarification"
+name = "Tarifs"
 pre = "#"
 url = "pricing"
 weight = 5
 
 [[Languages.fr.menu.main]]
-name = "blog"
+name = "Blog"
 pre = "#"
 url = "blog"
 weight = 6
 
 [[Languages.fr.menu.main]]
-name = "contact"
+name = "Contact"
 pre = "#"
 url = "contact"
 weight = 7
 
-[[Languages.fr.menu.main]]
-name = "themefisher"
-pre = ""
-url = "https://themefisher.com/"
-weight = 8
+# [[Languages.fr.menu.main]]
+# name = "themefisher"
+# pre = ""
+# url = "https://themefisher.com/"
+# weight = 8
 
 ############################# Default Parameters ##########################
 [params]
 logo = "images/logo.png"
 # Meta data
-description = "Responsive Multipurpose Parallax Hugo Template"
-author = "Themefisher"
+description = "La communication digitale freelance développment web"
+author = "David Bailly"
 # Google Analytics
 google_analytics_id = "" # Your ID
 # post share
@@ -202,7 +204,8 @@ languageCode = "en-us"
 contentDir = "content/english"
 weight = 1
 home = "Home"
-copyright = "Copyright &copy; 2020 Designed by [Themefisher](https://themefisher.com) & Developed by [Gethugothemes](https://gethugothemes.com)"
+# copyright = "Copyright &copy; 2020 Designed by [Themefisher](https://themefisher.com) & Developed by [Gethugothemes](https://gethugothemes.com)"
+copyright = "Copyright &copy; 2020 Designed by [Lc Digitale](https://lcdigitale.fr) & Developed by [David Bailly](https://davidbailly.fr)"
 
 ################################ France Language ########################
 [Languages.fr]
@@ -211,4 +214,5 @@ languageCode = "fr-fr"
 contentDir = "content/french"
 weight = 2
 home = "Accueil"
-copyright = "Copyright &copy; 2020 Designed by [Themefisher](https://themefisher.com) & Developed by [Gethugothemes](https://gethugothemes.com)"
+# copyright = "Copyright &copy; 2020 Designed by [Themefisher](https://themefisher.com) & Developed by [Gethugothemes](https://gethugothemes.com)"
+copyright = "Copyright &copy; 2021 Conception par [Lc Digitale](https://lcdigitale.fr) & Développé par [David Bailly](https://davidbailly.fr)"
