--- a/exampleSite/data/en/feature.yml
+++ b/exampleSite/data/en/feature.yml
@@ -1,27 +1,27 @@
 ############################# feature ###################################
 feature:
   enable : true
-  image : images/about/about-business-man.jpg
+  image : images/about/emma.jpg
   image_webp : images/about/about-business-man.webp
-  title : We’re A Digital Design Agency.
-  content : "Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam tempora itaque, autem dolores culpa cum mollitia voluptate nesciunt voluptatibus quasi."
+  title : Web development and Digital Marketing.
+  content : The digital communication freelance partner, to promote our skills to individuals and companies, by focusing on issues related to their business are part of our primary objectives, which allow us to establish support solutions.s
   feature_item : 
       # feature item loop
-    - title : SEO Optimized
+    - title : Website
       icon : ti-world # themify icon pack : https://themify.me/themify-icons
-      content : Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus consectetur dolores repellendus eos saepe
+      content : You Wish To Develop An Online Presence With An Internet Website, Showcase, E-commerce Or Mobile Application That Answers Your Needs, Let's Talk About It!
       
       # feature item loop
-    - title : Easy Customization
+    - title : Design
       icon : ti-panel # themify icon pack : https://themify.me/themify-icons
-      content : Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus consectetur dolores repellendus eos saepe
+      content : Adopting a unique, timeless design, we are listening to you to create an experience at the heart of your ecosystem. Let's talk about it!
 
       # feature item loop
     - title : SEO Optimized
       icon : ti-stats-up # themify icon pack : https://themify.me/themify-icons
-      content : Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus consectetur dolores repellendus eos saepe
+      content : Adopt Optimized, Organic Content, Be Visible, Recognized By Search Engines And Increase Your Traffic. Let's talk about it!
       
       # feature item loop
-    - title : Easy Customization
+    - title : Global Communication
       icon : ti-announcement # themify icon pack : https://themify.me/themify-icons
-      content : Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus consectetur dolores repellendus eos saepe
+      content : Master and Consolidate Your Communication, With Our Recommendations, You Will Develop Your Visibility And The Commitment Of Your Customers Let's Talk About It!
