--- a/exampleSite/data/fr/banner.yml
+++ b/exampleSite/data/fr/banner.yml
@@ -2,11 +2,12 @@
 banner:
   enable : true
   bg_image_webp : "images/backgrounds/hero-area.webp"
-  bg_image : "images/backgrounds/hero-area.jpg"
+  # bg_image : "images/backgrounds/hero-area.jpg"
+  bg_image : "images/backgrounds/pi-hero.png"
   icon : "" # themify icon pack : https://themify.me/themify-icons
-  title : "Experience the new reality"
-  content : "Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, excepturi. At recusandae sit perferendis autem,iste tempora nostrum numquam sapiente!"
+  title : "L'Intélligence Numérique"
+  content : " Travailler avec un partenaire freelance, c'est choisir une collaboration de proximités, une compréhension mutuelle, une confiance et un accompagnement pour votre futur projet!"
   button:
     enable : true
-    label : "Explore Us"
+    label : "Découvrez Nous"
     link : "#services"
